eliminadas partes de sonata ecomerce

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -5,8 +5,8 @@ imports:
     - { resource: sonata_news.yml }
     - { resource: sonata_formatter.yml }
     - { resource: services.yml }
-    - { resource: sonata_user.yml }
-    - { resource: sonata_product.yml }
+    # - { resource: sonata_user.yml }
+    # - { resource: sonata_product.yml }
     - { resource: imagine.yml }
     - { resource: "@SelnetTiendaOnlineBundle/Resources/config/admin.yml" }
 framework:
