--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -78,25 +78,25 @@ facebook_login:
 #     resource: @SonataUserBundle/Resources/config/routing/user.xml
 #     prefix: /shop/user
 
-sonata_order:
-    resource: @SonataOrderBundle/Resources/config/routing/order.xml
-    prefix: /shop/user/invoice
+# sonata_order:
+#     resource: @SonataOrderBundle/Resources/config/routing/order.xml
+#     prefix: /shop/user/invoice
 
-sonata_product_catalog:
-    resource: @SonataProductBundle/Resources/config/routing/catalog.xml
-    prefix: /shop/catalog
+# sonata_product_catalog:
+#     resource: @SonataProductBundle/Resources/config/routing/catalog.xml
+#     prefix: /shop/catalog
 
-sonata_product:
-    resource: @SonataProductBundle/Resources/config/routing/product.xml
-    prefix: /shop/product
+# sonata_product:
+#     resource: @SonataProductBundle/Resources/config/routing/product.xml
+#     prefix: /shop/product
 
-sonata_payment:
-    resource: @SonataPaymentBundle/Resources/config/routing/payment.xml
-    prefix: /shop/payment
+# sonata_payment:
+#     resource: @SonataPaymentBundle/Resources/config/routing/payment.xml
+#     prefix: /shop/payment
 
-sonata_invoice:
-    resource: @SonataInvoiceBundle/Resources/config/routing/invoice.xml
-    prefix: /shop/user/invoice
+# sonata_invoice:
+#     resource: @SonataInvoiceBundle/Resources/config/routing/invoice.xml
+#     prefix: /shop/user/invoice
 
 
 
