--- a/app/config/media.yml
+++ b/app/config/media.yml
@@ -61,7 +61,8 @@ sonata_media:
 
     cdn:
         server:
-            path: /artsenal/web/uploads/media # http://media.sonata-project.org/
+            # path: /artsenal/web/uploads/media 
+            path: /desa/web/uploads/media 
 
     filesystem:
         local:
