--- a/composer.json
+++ b/composer.json
@@ -1,125 +1,125 @@
 {
-    "name": "symfony/framework-standard-edition",
-    "license": "MIT",
-    "type": "project",
-    "description": "The \"Symfony Standard Edition\" distribution",
-    "autoload": {
-        "psr-0": { "": "src/" }
-        },
+  "name": "symfony/framework-standard-edition",
+  "license": "MIT",
+  "type": "project",
+  "description": "The \"Symfony Standard Edition\" distribution",
+  "autoload": {
+    "psr-0": { "": "src/" }
+    },
 
 
 
-        "repositories": [
-        {
-            "type": "package",
-            "package": {
-                "name": "jquery/jquery",
-                "version": "1.10.2",
-                "dist": {
-                    "url": "http://code.jquery.com/jquery-1.10.2.js",
-                    "type": "file"
-                }
-            }
+    "repositories": [
+    {
+      "type": "package",
+      "package": {
+        "name": "jquery/jquery",
+        "version": "1.10.2",
+        "dist": {
+          "url": "http://code.jquery.com/jquery-1.10.2.js",
+          "type": "file"
         }
-        ],
-        "require": {
-           "php": ">=5.3.3",
-           "symfony/symfony": "2.3.*",
-           "doctrine/orm": ">=2.2.3,<2.4-dev",
-           "doctrine/doctrine-bundle": "1.2.*",
-           "twig/extensions": "1.0.*",
-           "symfony/assetic-bundle": "2.3.*",
-           "symfony/swiftmailer-bundle": "2.3.*",
-           "symfony/monolog-bundle": "2.3.*",
-           "sensio/distribution-bundle": "2.3.*",
-           "sensio/framework-extra-bundle": "2.3.*",
-           "sensio/generator-bundle": "2.3.*",
-           "knplabs/knp-paginator-bundle": "~2.4",
-           "sonata-project/ecommerce": "2.3@dev",
-           "incenteev/composer-parameter-handler": "~2.0",
-           "friendsofsymfony/user-bundle": "1.3.3",
-           "symfony/icu": "~1.0",
+      }
+    }
+    ],
+    "require": {
+     "php": ">=5.3.3",
+     "symfony/symfony": "2.3.*",
+     "doctrine/orm": ">=2.2.3,<2.4-dev",
+     "doctrine/doctrine-bundle": "1.2.*",
+     "twig/extensions": "1.0.*",
+     "symfony/assetic-bundle": "2.3.*",
+     "symfony/swiftmailer-bundle": "2.3.*",
+     "symfony/monolog-bundle": "2.3.*",
+     "sensio/distribution-bundle": "2.3.*",
+     "sensio/framework-extra-bundle": "2.3.*",
+     "sensio/generator-bundle": "2.3.*",
+     "knplabs/knp-paginator-bundle": "~2.4",
+     "sonata-project/ecommerce": "2.3@dev",
+     "incenteev/composer-parameter-handler": "~2.0",
+     "friendsofsymfony/user-bundle": "1.3.3",
+     "symfony/icu": "~1.0",
 
 
-           "hwi/oauth-bundle": "0.4.*@dev",
-           "knplabs/knp-paginator-bundle": "~2.4", 
-           "braincrafted/bootstrap-bundle": "~2.0" , 
+     "hwi/oauth-bundle": "0.4.*@dev",
+     "knplabs/knp-paginator-bundle": "~2.4", 
+     "braincrafted/bootstrap-bundle": "~2.0" , 
 
 
-           "stof/doctrine-extensions-bundle": "dev-master" , 
-           "ass/xmlsecurity":      "dev-master",
+     "stof/doctrine-extensions-bundle": "dev-master" , 
+     "ass/xmlsecurity":      "dev-master",
 
 
 
-           "sonata-project/admin-bundle": "dev-master",
-           "sonata-project/block-bundle": "dev-master",
-           "sonata-project/doctrine-orm-admin-bundle": "dev-master",
-           "sonata-project/user-bundle": "dev-master",
-           "sonata-project/news-bundle": "dev-master",            
-           "sonata-project/datagrid-bundle": "2.2.*@dev",
-           "sonata-project/easy-extends-bundle": "dev-master",
-           "sonata-project/media-bundle": "dev-master",
-           "sonata-project/intl-bundle": "dev-master", 
-           "sonata-project/formatter-bundle": "dev-master",
-           "sonata-project/classification-bundle": "~2.2@dev",
-           "sonata-project/ecommerce": "dev-develop",
-           "sonata-project/comment-bundle": "~2.2@dev",
+     "sonata-project/admin-bundle": "dev-master",
+     "sonata-project/block-bundle": "dev-master",
+     "sonata-project/doctrine-orm-admin-bundle": "dev-master",
+     "sonata-project/user-bundle": "dev-master",
+     "sonata-project/news-bundle": "dev-master",            
+     "sonata-project/datagrid-bundle": "2.2.*@dev",
+     "sonata-project/easy-extends-bundle": "dev-master",
+     "sonata-project/media-bundle": "dev-master",
+     "sonata-project/intl-bundle": "dev-master", 
+     "sonata-project/formatter-bundle": "dev-master",
+     "sonata-project/classification-bundle": "~2.2@dev",
+     "sonata-project/ecommerce": "dev-develop",
+     "sonata-project/comment-bundle": "~2.2@dev",
 
-           "dflydev/markdown": "~1.0",
-           "simplethings/entity-audit-bundle": "~0.5",
-           "willdurand/faker-bundle": "~1.0",
+     "dflydev/markdown": "~1.0",
+     "simplethings/entity-audit-bundle": "~0.5",
+     "willdurand/faker-bundle": "~1.0",
 
-           "mopa/bootstrap-bundle": "v3.0.0-beta3",
-           "twbs/bootstrap": "v3.0.0",
+     "mopa/bootstrap-bundle": "v3.0.0-beta3",
+     "twbs/bootstrap": "v3.0.0",
 
 
-           "jms/security-extra-bundle": "~1.5",
-           "jms/di-extra-bundle": "~1.4",
-           "jms/serializer-bundle": "dev-master",
+     "jms/security-extra-bundle": "~1.5",
+     "jms/di-extra-bundle": "~1.4",
+     "jms/serializer-bundle": "dev-master",
 
-           "friendsofsymfony/jsrouting-bundle": "@stable", 
+     "friendsofsymfony/jsrouting-bundle": "@stable", 
 
-           "jquery/jquery":  "1.10.*",
-           "sonata-project/page-bundle": "dev-master",
-           "sonata-project/notification-bundle": "dev-master",
-           "sonata-project/seo-bundle": "dev-master",
-           "gedmo/doctrine-extensions": "dev-master", 
-           "avalanche123/imagine-bundle": "v2.1",
-        "symfony/intl": "2.6.*@dev",
-        "sonata-project/markitup-bundle": "2.1.*@dev",
-        "comur/image-bundle": "~1.0"
-           
-           
-           
-            
-           },
-           "scripts": {
-            "post-install-cmd": [
-            "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
-            ],
-            "post-update-cmd": [
-            "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
-            ]
+     "jquery/jquery":  "1.10.*",
+     "sonata-project/page-bundle": "dev-master",
+     "sonata-project/notification-bundle": "dev-master",
+     "sonata-project/seo-bundle": "dev-master",
+     "gedmo/doctrine-extensions": "dev-master", 
+     "avalanche123/imagine-bundle": "v2.1",
+     "symfony/intl": "2.6.*@dev",
+     "sonata-project/markitup-bundle": "2.1.*@dev",
+     "comur/image-bundle": "~1.0",
+     
+     
+     
+     
+     },
+     "scripts": {
+      "post-install-cmd": [
+      "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
+      ],
+      "post-update-cmd": [
+      "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
+      "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
+      ]
+      },
+      "config": {
+        "bin-dir": "bin"
+        },
+        "extra": {
+          "symfony-app-dir": "app",
+          "symfony-web-dir": "web",
+          "incenteev-parameters": {
+            "file": "app/config/parameters.yml"
             },
-            "config": {
-                "bin-dir": "bin"
-                },
-                "extra": {
-                    "symfony-app-dir": "app",
-                    "symfony-web-dir": "web",
-                    "incenteev-parameters": {
-                        "file": "app/config/parameters.yml"
-                        },
-                        "branch-alias": {
-                            "dev-master": "2.4-dev"
-                        }
-                    }
-                }
+            "branch-alias": {
+              "dev-master": "2.4-dev"
+            }
+          }
+        }
