--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -84,12 +84,14 @@ doctrine:
 
 # Swiftmailer Configuration
 swiftmailer:
-    transport: "%mailer_transport%"
-    host:      "%mailer_host%"
-    username:  "%mailer_user%"
-    password:  "%mailer_password%"
-    spool:     { type: memory }
-
+    # transport: "%mailer_transport%"
+    # host:      "%mailer_host%"
+    # username:  "%mailer_user%"
+    # password:  "%mailer_password%"
+    # spool:     { type: memory }
+    transport:  gmail   
+    username:   yc@selnet.com.ec
+    password:   godfamily
 
 
 sonata_admin:
