--- a/src/Selnet/TiendaOnlineBundle/Resources/config/doctrine/Usuario.orm.yml
+++ b/src/Selnet/TiendaOnlineBundle/Resources/config/doctrine/Usuario.orm.yml
@@ -21,4 +21,7 @@ Selnet\TiendaOnlineBundle\Entity\Usuario:
         sexo:
             type: integer
             nullable: false
+        terminos:
+            type: integer
+            nullable: false
 
